kyverno/validate-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-image
  annotations:
    policies.kyverno.io/title: Verify Image
    policies.kyverno.io/category: Software Supply Chain Security, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.7.0
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-image
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "poc4k-tsnode1b.ovng.dev.myovcloud.com/docker-main/*"
          mutateDigest: true
          verifyDigest: true
          attestors:
            - entries:
                - keys:
                    publicKeys: |
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEaBQVZp7JHy/SMufILZBgTWa2TFsv
[...]
                      -----END PUBLIC KEY-----
                    ctlog:
                      pubkey: |
                        -----BEGIN PUBLIC KEY-----
                        MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEaBQVZp7JHy/SMufILZBgTWa2TFsv
[...]
                        -----END PUBLIC KEY-----
                    rekor:
                      ignoreTlog: true
